--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>The Cursed Tumbler</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In the abyss of existence, a tumbler lay cursed. Its very existence was a mockery of the natural order, for it could never fulfill its purpose. Though it was crafted to hold liquid and sustain life, its curse prevented it from ever fulfilling this task.</p>
+							<p align="justify">The tumbler had once been a thing of beauty, carefully crafted by the hands of skilled artisans. It was crafted from the finest materials, and its form was elegant and functional. Yet its beauty was a mere facade, for its curse lay hidden within. The curse had been placed upon the tumbler by an ancient sorcerer, who had been angered by the arrogance of man. The sorcerer had imbued the tumbler with a curse that would prevent it from ever fulfilling its purpose, thus mocking man's attempts to control the natural world.</p>
+							<p align="justify">The tumbler languished in its cursed existence, unable to fulfill its purpose and trapped in a perpetual state of frustration. It watched as other vessels fulfilled their roles, holding water and sustaining life, while it remained empty and useless. Yet in its curse, the tumbler found a strange kind of freedom. It was free from the burden of purpose, free from the expectations of others. It was free to exist for its own sake, to be itself without the constraints of utility.</p>
+							<p align="justify">In this way, the tumbler became a symbol of defiance, a reminder that existence need not be defined by utility alone. It became a symbol of the power of existence itself, of the will to be, even in the face of futility.</p>
+							<p align="justify">And so the tumbler lay, cursed and yet free, a testament to the paradox of existence, and a challenge to the arrogance of man.</p>
+							<p align="right"><strong>July 2022</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Camphor Tree</strong></h2>
 							</div>
 							<br />
