--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>Land of Clouds</strong></h2>
+							</div>
+							<br />
+							<p align="justify">Once upon a time, there was a land above the clouds. Its people were proud of their high altitude, as they believed it granted them a superior view of the world below. They boasted of their isolation from the struggles of the earthbound folk and the purity of their air.</p>
+							<p align="justify">But one day, a great storm rolled in from the horizon. As it drew closer, the people of the land above the clouds realized with horror that it was not an ordinary tempest. The rain that fell from the sky was not clear and refreshing, but toxic and corrosive. It burned through everything it touched, leaving behind only ruin and decay.</p>
+							<p align="justify">The people of the land above the clouds were shocked and dismayed. How could this happen to them, who were so high and mighty? They had believed themselves immune to the troubles of the world, protected by their lofty elevation. But now they were forced to confront the harsh reality that no one was truly safe from the storms of life.</p>
+							<p align="justify">As they struggled to adapt to this new and unwelcome reality, the people of the land above the clouds found themselves forced to question their old beliefs and assumptions. Was their isolation truly a strength, or had it merely made them complacent and weak? Had they been too quick to dismiss the problems of the earthbound folk as beneath their notice, and now paid the price for their arrogance?</p>
+							<p align="justify">The rain continued to fall, unabated, for days and weeks and months. The land above the clouds was transformed into a wasteland, its once-proud structures reduced to rubble and its people sick and dying. But even in the midst of this despair, there were those who refused to give up hope. They worked tirelessly to rebuild what had been lost and to find ways to survive and thrive in this new, harsh world.</p>
+							<p align="justify">Perhaps, in the end, the people of the land above the clouds would emerge stronger and wiser from the crucible of this disaster. Or perhaps they would simply fade away, a cautionary tale of the dangers of pride and hubris. Only time would tell.</p>
+							<p align="right"><strong>August 2022</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>The Cursed Tumbler</strong></h2>
 							</div>
 							<br />
