--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>The Suicide Fest</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In the midst of the chaos and despair of modern society, a festival arose. It was a festival of death, a celebration of the ultimate act of self-assertion. The festival was called "The Suicide Fest", and it was held in the heart of a city that had long ago lost its soul.</p>
+							<p align="justify">People came from far and wide to participate in the festival. They came to escape the pain and emptiness of their lives, to find meaning in a world that had left them behind. They came to assert their will to power, to show the world that they were not afraid to die.</p>
+							<p align="justify">The festival was a spectacle unlike any other. The streets were lined with vendors selling everything from knives and ropes to drugs and alcohol. The air was thick with the smell of blood and death. And the people, oh the people! They were wild and free, screaming and laughing as they plunged themselves into the abyss of non-existence.</p>
+							<p align="justify">And yet, even as the festival raged on, there was a sense of emptiness at its core. For all the talk of self-assertion and will to power, there was a sense that something was missing. Perhaps it was the absence of love, or the lack of a true sense of community. Perhaps it was the realization that, even in death, we are still alone.</p>
+							<p align="justify">In the end, the festival came to a close. The streets were cleared of the bodies, the vendors packed up their wares, and the city returned to its usual state of emptiness. But for those who had participated in the festival, the memory would live on. It would be a reminder that, even in the darkest of times, there is still a spark of life that burns within us. And that, perhaps, is the greatest affirmation of all.</p>
+							<p align="right"><strong>September 2022</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Land of Clouds</strong></h2>
 							</div>
 							<br />
