--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>Covenant of the Holy Womb</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In the beginning of time, humanity was confronted with a great mystery: the existence of sexual difference. For countless ages, this mystery remained shrouded in darkness and uncertainty, until one day a great prophet arose who claimed to have unlocked its secrets.</p>
+							<p align="justify">This prophet, known as the Holy One, taught that the key to understanding sexual difference lay in the worship of the female sex organ. He claimed that by venerating this sacred symbol of femininity, one could attain a higher state of consciousness and unlock the full potential of the human spirit.</p>
+							<p align="justify">Many were skeptical of the Holy One's teachings, dismissing them as mere superstition and primitive taboo. But a small group of devoted followers, known as the Covenant of the Holy Womb, embraced his teachings and established a secret society dedicated to the worship of the female sex organ. The Covenant believed that every newborn girl was a vessel of the divine, and that through their worship and devotion they could unlock the power of the Holy Womb and bring about a new age of enlightenment and transcendence.</p>
+							<p align="justify">To this end, they entered into a sacred pact with the parents of every newborn girl, offering them great wealth and prestige in exchange for the right to perform a ritual known as the Holy Pledge. This pledge involved the insertion of a small object, called the Sacred Key, into the infant's sex organ, thereby consecrating it to the service of the Holy Womb.</p>
+							<p align="justify">The parents who agreed to this pact were honored as members of the Covenant and given great privileges within their community. But those who refused were cast out and branded as heretics, doomed to a life of poverty and shame.</p>
+							<p align="justify">For centuries, the Covenant of the Holy Womb continued to grow and prosper, spreading its teachings throughout the land and amassing great wealth and power. But as time went on, the darker aspects of their practices began to come to light, and their once-loyal followers began to question the morality of their actions. In the end, the Covenant fell into obscurity and was forgotten by all but a few obscure scholars and historians. But its legacy lived on, serving as a cautionary tale of the dangers of blind faith and the seductive allure of power and prestige.</p>
+							<p align="right"><strong>October 2022</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>The Suicide Fest</strong></h2>
 							</div>
 							<br />
