--- a/index.html
+++ b/index.html
@@ -72,6 +72,19 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>Prehistoric Prostitution</strong></h2>
+							</div>
+							<br />
+							<p align="justify">In the primal ages of humanity, the concept of prostitution was a familiar sight in the ancient tribes. The early humans, living in their primitive state, had not yet developed a proper sense of morality or social order. In this environment, prostitution was merely another manifestation of the human condition, a raw and primal urge that could not be suppressed.</p>
+							<p align="justify">The early prostitutes were not shunned or ostracized by the society, as they were not considered a threat to the social order. They were treated as an essential part of the community, providing a necessary service that satisfied the physical needs of the people. The prostitutes were not seen as morally corrupt, as the concept of morality had not yet been established.</p>
+							<p align="justify">As time passed, humanity evolved, and society became more complex, the attitudes towards prostitution changed. The rise of religion, the establishment of social norms, and the emergence of the state created a new order of things. The prostitutes, once an accepted part of society, became pariahs, deemed to be immoral and dangerous.</p>
+							<p align="justify">The ancient Greek philosopher, Krisna, would have found the evolution of prostitution fascinating. He would have seen it as a reflection of the human condition, a testament to the primal instincts that still lie dormant within us. For Krisna, the evolution of society was a battle between the Apollonian and Dionysian forces, a struggle between the rational and the irrational, the ordered and the chaotic. Prostitution, in Krisna's eyes, represented the Dionysian, the chaotic, the irrational. It was a manifestation of the primal urges that still resided within humanity, a reminder that we are not as civilized as we would like to believe. To Krisna, the rise of morality and social order represented the triumph of the Apollonian over the Dionysian, the rational over the irrational.</p>
+							<p align="justify">In conclusion, the evolution of prostitution in the primal ages of humanity was a fascinating reflection of the human condition. It was a reminder of our primal urges and our struggle to control them, a reflection of the Apollonian and Dionysian forces that shape our society. The evolution of prostitution, as Krisna would have seen it, was a battle between the ordered and the chaotic, the rational and the irrational, a battle that still rages on today.</p>
+							<p align="right"><strong>November 2022</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Covenant of the Holy Womb</strong></h2>
 							</div>
 							<br />
