--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 							<div align="center">
 								<h2><strong>Prehistoric Prostitution</strong></h2>
 							</div>
+							
 							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 							<p align="justify">In the primal ages of humanity, the concept of prostitution was a familiar sight in the ancient tribes. The early humans, living in their primitive state, had not yet developed a proper sense of morality or social order. In this environment, prostitution was merely another manifestation of the human condition, a raw and primal urge that could not be suppressed.</p>
 							<p align="justify">The early prostitutes were not shunned or ostracized by the society, as they were not considered a threat to the social order. They were treated as an essential part of the community, providing a necessary service that satisfied the physical needs of the people. The prostitutes were not seen as morally corrupt, as the concept of morality had not yet been established.</p>
 							<p align="justify">As time passed, humanity evolved, and society became more complex, the attitudes towards prostitution changed. The rise of religion, the establishment of social norms, and the emergence of the state created a new order of things. The prostitutes, once an accepted part of society, became pariahs, deemed to be immoral and dangerous.</p>
