--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 								<h2><strong>Covenant of the Holy Womb</strong></h2>
 							</div>
 							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 							<p align="justify">In the beginning of time, humanity was confronted with a great mystery: the existence of sexual difference. For countless ages, this mystery remained shrouded in darkness and uncertainty, until one day a great prophet arose who claimed to have unlocked its secrets.</p>
 							<p align="justify">This prophet, known as the Holy One, taught that the key to understanding sexual difference lay in the worship of the female sex organ. He claimed that by venerating this sacred symbol of femininity, one could attain a higher state of consciousness and unlock the full potential of the human spirit.</p>
 							<p align="justify">Many were skeptical of the Holy One's teachings, dismissing them as mere superstition and primitive taboo. But a small group of devoted followers, known as the Covenant of the Holy Womb, embraced his teachings and established a secret society dedicated to the worship of the female sex organ. The Covenant believed that every newborn girl was a vessel of the divine, and that through their worship and devotion they could unlock the power of the Holy Womb and bring about a new age of enlightenment and transcendence.</p>
@@ -104,6 +105,7 @@
 								<h2><strong>The Suicide Fest</strong></h2>
 							</div>
 							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 							<p align="justify">In the midst of the chaos and despair of modern society, a festival arose. It was a festival of death, a celebration of the ultimate act of self-assertion. The festival was called "The Suicide Fest", and it was held in the heart of a city that had long ago lost its soul.</p>
 							<p align="justify">People came from far and wide to participate in the festival. They came to escape the pain and emptiness of their lives, to find meaning in a world that had left them behind. They came to assert their will to power, to show the world that they were not afraid to die.</p>
 							<p align="justify">The festival was a spectacle unlike any other. The streets were lined with vendors selling everything from knives and ropes to drugs and alcohol. The air was thick with the smell of blood and death. And the people, oh the people! They were wild and free, screaming and laughing as they plunged themselves into the abyss of non-existence.</p>
@@ -117,6 +119,7 @@
 								<h2><strong>Land of Clouds</strong></h2>
 							</div>
 							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 							<p align="justify">Once upon a time, there was a land above the clouds. Its people were proud of their high altitude, as they believed it granted them a superior view of the world below. They boasted of their isolation from the struggles of the earthbound folk and the purity of their air.</p>
 							<p align="justify">But one day, a great storm rolled in from the horizon. As it drew closer, the people of the land above the clouds realized with horror that it was not an ordinary tempest. The rain that fell from the sky was not clear and refreshing, but toxic and corrosive. It burned through everything it touched, leaving behind only ruin and decay.</p>
 							<p align="justify">The people of the land above the clouds were shocked and dismayed. How could this happen to them, who were so high and mighty? They had believed themselves immune to the troubles of the world, protected by their lofty elevation. But now they were forced to confront the harsh reality that no one was truly safe from the storms of life.</p>
@@ -131,6 +134,7 @@
 								<h2><strong>The Cursed Tumbler</strong></h2>
 							</div>
 							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 							<p align="justify">In the abyss of existence, a tumbler lay cursed. Its very existence was a mockery of the natural order, for it could never fulfill its purpose. Though it was crafted to hold liquid and sustain life, its curse prevented it from ever fulfilling this task.</p>
 							<p align="justify">The tumbler had once been a thing of beauty, carefully crafted by the hands of skilled artisans. It was crafted from the finest materials, and its form was elegant and functional. Yet its beauty was a mere facade, for its curse lay hidden within. The curse had been placed upon the tumbler by an ancient sorcerer, who had been angered by the arrogance of man. The sorcerer had imbued the tumbler with a curse that would prevent it from ever fulfilling its purpose, thus mocking man's attempts to control the natural world.</p>
 							<p align="justify">The tumbler languished in its cursed existence, unable to fulfill its purpose and trapped in a perpetual state of frustration. It watched as other vessels fulfilled their roles, holding water and sustaining life, while it remained empty and useless. Yet in its curse, the tumbler found a strange kind of freedom. It was free from the burden of purpose, free from the expectations of others. It was free to exist for its own sake, to be itself without the constraints of utility.</p>
