--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>Political Wedding</strong></h2>
+							</div>
+							
+							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<p align="justify">Once upon a time, in a kingdom ruled by tradition and conservatism, two women of noble birth fell in love. They knew that their love was forbidden by the laws of their kingdom, but they could not deny their feelings for each other.</p>
+							<p align="justify">One of the women was the daughter of the kingdom's Prime Minister, while the other was a princess from a neighboring kingdom. Their love was seen as a threat to the stability of the kingdom, as it could potentially cause a scandal and damage the reputation of the ruling class.</p>
+							<p align="justify">However, the two women were determined to be together, despite the opposition from their families and the wider society. They knew that their love was real and that they deserved the same rights and recognition as any other couple.</p>
+							<p align="justify">Eventually, they decided to challenge the system and seek recognition for their love through a political marriage. They knew that this would be a bold move, as it would require them to openly declare their love and face the consequences of their actions.</p>
+							<p align="justify">But they were willing to take that risk, as they believed in the power of love to overcome all obstacles. They saw their union as a symbol of hope and progress, a way to break free from the rigid norms of their society and pave the way for a more inclusive and tolerant future.</p>
+							<p align="justify">Their wedding was a spectacle of defiance and beauty, a celebration of love that transcended all boundaries. And so, the two women were wed in a ceremony that shook the foundations of their kingdom. It was a testament to the courage and strength of their love, and a reminder that sometimes, the greatest revolutions start with the simple act of following your heart.</p>
+							<p align="right"><strong>December 2022</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Prehistoric Prostitution</strong></h2>
 							</div>
 							
