--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>Self Love</strong></h2>
+							</div>
+							
+							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<p align="justify">In the realm of human diversity, there exists a curious case of an individual who possessed both male and female genitalia. This being, unlike any other, found themselves struggling to fit into the rigid societal norms that demanded a clear-cut binary of gender identity.</p>
+							<p align="justify">It was a tumultuous journey for this individual, who faced ridicule and ostracism from their peers, as well as the constant pressure to conform to a predetermined role within society. Yet, despite these challenges, this being remained resolute in their quest to find self-acceptance and fulfillment. In a moment of great epiphany, this being realized that they were not bound by the limitations of societal constructs, and that they held within them the power to define their own reality. It was then that they made the fateful decision to marry themselves, embracing all aspects of their dual nature and transcending the confines of traditional gender roles.</p>
+							<p align="justify">For this individual, marriage was not simply a union of two separate beings, but a profound act of self-love and self-acceptance. In their eyes, they were not marrying another, but rather merging with their own unique identity, forming a beautiful and harmonious whole.</p>
+							<p align="justify">Though many may view this as an act of madness or defiance, this individual saw it as a radical act of liberation, a rejection of the shackles that society had placed upon them. They stood tall and proud, a testament to the limitless potential of the human spirit, and a shining example of the power of self-love.</p>
+							<p align="justify">"The individual has always had to struggle to keep from being overwhelmed by the tribe. If you try it, you will be lonely often, and sometimes frightened."</p>
+							<p align="justify">But no price is too high to pay for the privilege of owning oneself. And so it was for this being, who owned themselves wholly and completely, unbound by the constraints of society, and free to soar to new heights of self-discovery and fulfillment.</p>
+							<p align="right"><strong>January 2023</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Political Wedding</strong></h2>
 							</div>
 							
