--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>Virus</strong></h2>
+							</div>
+							
+							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<p align="justify">In the depths of the human psyche, a virus lay dormant, waiting to awaken and consume the very essence of its host. It was a virus unlike any other, for it did not seek to merely infect the body, but to infiltrate the mind and seize control.</p>
+							<p align="justify">As it spread from person to person, it left a trail of destruction in its wake. Minds once sharp and focused became clouded with delusion and madness. The virus fed on the very thoughts and memories of its victims, leaving them hollow and devoid of all that made them human.</p>
+							<p align="justify">And yet, there were some who welcomed the virus with open arms. They saw it as a gateway to a new reality, a chance to escape the confines of their own minds and experience something beyond the limitations of the flesh. But these individuals were not immune to the virus's insidious effects. As it consumed them, they became enslaved to its will, puppets in a grand cosmic play.</p>
+							<p align="justify">The virus consumed all it touched, leaving a world devoid of thought and feeling. And as the last remnants of humanity were devoured, the virus stood victorious, the conqueror of all that was once held sacred.</p>
+							<p align="justify">Such is the fate of the human brain-eating virus, a manifestation of the darkest impulses that lurk within us all. And yet, even in its triumph, it is nothing more than a reflection of our own fears and desires, a mirror of the very essence of what it means to be human.</p>
+							<p align="right"><strong>February 2023</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Self Love</strong></h2>
 							</div>
 							
