--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
 						<div class="container">
 
 							<div align="center">
+								<h2><strong>Bloody Kids</strong></h2>
+							</div>
+							
+							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<p align="justify">In a small, dreary village nestled amidst the rugged peaks of a desolate mountain range, there lived an old woman. She was known as Irelin, but the villagers often referred to her as the "Blood Hag." With her stooped back and gnarled hands, she was a figure of both fear and curiosity, for she was believed to possess a sinister secret. Irelin had once been a proud and respected member of the community, but as time passed, she fell into destitution. Her meager pension was barely enough to sustain her, and her health was failing. Desperate for a way to escape her grim reality, Irelin hatched a wicked scheme that would soon send shockwaves through the village.</p>
+							<p align="justify">One moonless night, Irelin ventured into the darkness with a sinister glint in her eye. She approached a dilapidated shack on the outskirts of the village, where a sickly child named Emil lay weak and feverish. Emil was the grandson of Irelin, and she had cared for him since his parents had perished in a tragic accident. But now, she saw him as a pawn in her wicked plan.</p>
+							<p align="justify">Irelin, consumed by her insatiable hunger for gold, made a pact with a dubious figure known only as the "Collector." This enigmatic figure had a penchant for the macabre and sought rare commodities, including the blood of innocent children. Irelin, lured by the promise of wealth, agreed to provide Emil's blood to the Collector in exchange for a handsome sum. With a trembling hand, Irelin pricked Emil's frail arm with a needle, drawing his precious life force into a vile container. She shuddered at the sight of the crimson fluid, but her lust for riches eclipsed any sense of guilt or remorse. She delivered the vile container to the Collector in a clandestine meeting, exchanging it for a sack of gleaming coins.</p>
+							<p align="justify">As Irelin counted her ill-gotten gains, she felt a sickening emptiness gnawing at her soul. She had betrayed her own flesh and blood for material wealth, and her conscience was plagued by a gnashing sense of nihilism. The once-vibrant village now recoiled in horror at the Blood Hag's heinous deed, and she was shunned by all.</p>
+							<p align="justify">Irelin's descent into darkness was swift and brutal. Her body withered, and her mind was tormented by haunting visions of Emil's blood-stained face. Her wealth brought her no solace, for it was tarnished by the blood of innocence. She became a pariah, a grotesque figure who roamed the village like a ghost, a wretched embodiment of the abyss that lurks within the human soul.</p>
+							<p align="justify">The village, scarred by Irelin's dark legacy, learned a harsh lesson about the corrupting nature of greed and the consequences of forsaking moral values. Emil's blood, once sold for profit, was now seen as a stain on the collective conscience of the community. Irelin's sordid tale echoed through the ages, a somber reminder of the fragility of morality and the perilous descent into darkness that can befall even the most revered among us.</p>
+							<p align="right"><strong>March 2023</strong></p>
+							<br />							
+							<br />
+							<br />
+							<div align="center">
 								<h2><strong>Virus</strong></h2>
 							</div>
 							
