--- a/index.html
+++ b/index.html
@@ -70,7 +70,23 @@
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
-
+							<div align="center">
+								<h2><strong>Human Slayer</strong></h2>
+							</div>
+							
+							<br />
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<p align="justify">In a desolate, post-Enlightenment world, the myth of progress had given way to the stark reality of human nature. Amid the desolation rose a figure, the Human Slayer, an embodiment not of humanity's demise, but of its ultimate realization.</p>
+							<p align="justify">This Slayer wasn't the traditional murderer or conqueror of lands; instead, he slayed the illusions and delusions that humanity clung to. The ideas of eternal goodness, inherent meaning, and divine salvation were his victims, struck down by the sharp blade of his nihilistic critique.</p>
+							<p align="justify">He wandered the world, confronting philosophers, theologians, and common folk alike. "What purpose do you see in this life?" he would ask, piercingly. Their stammered answers only revealed the depth of their self-deception.</p>
+							<p align="justify">One day, upon a steep mountain, he encountered a monk. This monk, unlike others, did not tremble before the Slayer’s gaze. "You may have vanquished many illusions," said the monk, "but you are a slave to your own doctrine of meaninglessness. You, too, search for purpose in tearing down the purpose of others."</p>
+							<p align="justify">The Slayer, for the first time, was taken aback. His quest had always been against the false comforts and crutches of humanity, but had he himself not become another form of that same illusion?</p>
+							<p align="justify">"Whoever fights monsters should see to it that in the process he does not become a monster." The Human Slayer stood atop that mountain, and for the first time, gazed deep within, wondering if he had become the very thing he despised.</p>
+							<p align="right"><strong>May 2023</strong></p>
+							<br />							
+							<br />
+							<br />
+							
 							<div align="center">
 								<h2><strong>Party</strong></h2>
 							</div>
